0027123: Visualization, TKOpenGl - fix environment texture GLSL program

OpenGl_ShaderManager::prepareStdProgramFlat() - properly initialize vec4.